[metadata]
name = pangeo-forge-esgf
description = "Using queries to the ESGF API to generate urls and keyword arguments for receipe generation in pangeo-forge"
long_description = file:README.md
long_description_content_type = text/markdown
maintainer = Julius Busecke
maintainer_email = julius@ldeo.columbia.edu
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

url = https://github.com/jbusecke/pangeo-forge-esgf
license = Apache
keywords = pangeo, data, esgf

[options]
zip_safe = False
python_requires = >=3.9
packages = find:
include_package_data = True
install_requires =
  aiohttp
  requests